Misc fixes and improvements for 2.5.6
1. Fix RCCL unit test
2. Add ROME detection and tuning
3. Change default P2P level
4. Fix search algorithm for XGMI
5. Remove explicit channel duplication with implicit by using half of link speed
6. Add collective trace support
7. Correct Intel Skylake CPU detection and bandwidth
8. Fix topo connect function
9. Disable GDR read and remove unreachable code
10. Disable LL128 kernels
11. Add tuning parameters
12. Use original clock64() implementation which returns RTC counter value
13. Print out timestamp of collective trace
14. Do not use struct ncclColl in kernel launch parameter
15. Fix abort handling and add tracing
17. Add __launch_bounds__ to kernel functions
18. Remove unused abortCount
19. Unset default MIN_NRINGS and MIN_NCHANNELS
20. Do not allocate shared memory when not using LL128 kernels

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,6 +147,11 @@ if(PROFILE)
   add_definitions(-DENABLE_PROFILING)
 endif()
 
+set(COLLTRACE 1 CACHE BOOL "Collective Trace Option")
+if(COLLTRACE)
+  add_definitions(-DENABLE_COLLTRACE)
+endif()
+
 foreach(target ${AMDGPU_TARGETS})
 target_link_libraries(rccl PRIVATE --amdgpu-target=${target})
 endforeach()
