--- a/docker/dockerfile-build-centos
+++ b/docker/dockerfile-build-centos
@@ -1,3 +1,4 @@
+# Copyright (c) 2019-2020 Advanced Micro Devices, Inc. All rights reserved.
 # This Dockerfile provides a starting point for a ROCm installation of rccl
 
 # Parameters related to building rccl
