--- a/docker/dockerfile-build-ubuntu-rock
+++ b/docker/dockerfile-build-ubuntu-rock
@@ -1,3 +1,4 @@
+# Copyright (c) 2019-2020 Advanced Micro Devices, Inc. All rights reserved.
 # Parameters related to building rccl
 ARG base_image
 
